# py-osrm

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: gh-pages.yml  osrm-backend.yml  publish_wheels.yml  pull_request.yml  push_master.yml
cmake/: FindLibOSRM.cmake
docker/: dockerfile
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/pages/: base.md  match.md  nearest.md  osrm.md  route.md  table.md  tile.md  trip.md
docs/source/: conf.py  index.rst  osrm.rst  parameters.rst  usage.rst
include/: engineconfig_nb.h
include/parameters/: baseparameter_nb.h  matchparameter_nb.h  nearestparameter_nb.h  routeparameter_nb.h  tableparameter_nb.h  tileparameter_nb.h  tripparameter_nb.h
include/types/: approach_nb.h  bearing_nb.h  boost_optional_nb.h  coordinate_nb.h  jsoncontainer_nb.h  optional_nb.h  status_nb.h
include/utility/: osrm_kwargs.h  osrm_utility.h  param_utility.h
pages/base/: index.html
pages/match/: index.html
pages/nearest/: index.html
pages/osrm/: index.html
pages/route/: index.html
pages/table/: index.html
pages/tile/: index.html
pages/trip/: index.html
search/: search_index.json
src/: engineconfig_nb.cpp  osrm_nb.cpp
src/osrm/: __init__.py  __main__.py
src/parameters/: baseparameter_nb.cpp  matchparameter_nb copy.cpp  matchparameter_nb.cpp  nearestparameter_nb.cpp  routeparameter_nb.cpp  tableparameter_nb.cpp  tileparameter_nb.cpp  tripparameter_nb.cpp
src/py_osrm/: __init__.py
src/types/: approach_nb.cpp  bearing_nb.cpp  coordinate_nb.cpp  jsoncontainer_nb.cpp  optional_nb.cpp  status_nb.cpp
src/utility/: osrm_kwargs.cpp  osrm_utility.cpp  param_utility.cpp
tests/: constants.py  test.py  test_index.py  test_match.py  test_nearest.py  test_route.py  test_table.py  test_tile.py  test_trip.py
tests/data/: Makefile  windows-build-tests.bat
tests/test_data/: monaco.osrm.cnbg_to_ebg  monaco.osrm.ebg  monaco.osrm.fileIndex  monaco.osrm.maneuver_overrides  monaco.osrm.names  monaco.osrm.timestamp  monaco.osrm.tld
tests/test_data/ch/: monaco.osrm.cnbg  monaco.osrm.ebg_nodes  monaco.osrm.hsgr  monaco.osrm.properties  monaco.osrm.turn_duration_penalties
tests/test_data/corech/: monaco.osrm.enw  monaco.osrm.geometry  monaco.osrm.hsgr  monaco.osrm.icd  monaco.osrm.nbg_nodes  monaco.osrm.ramIndex  monaco.osrm.turn_weight_penalties
tests/test_data/mld/: monaco.osrm.cell_metrics  monaco.osrm.cells  monaco.osrm.cnbg_to_ebg  monaco.osrm.datasource_names  monaco.osrm.ebg  monaco.osrm.ebg_nodes  monaco.osrm.edges  monaco.osrm.enw  monaco.osrm.fileIndex  monaco.osrm.mldgr  monaco.osrm.partition  monaco.osrm.restrictions  monaco.osrm.tls  monaco.osrm.turn_penalties_index
