[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.1"]
build-backend = "scikit_build_core.build"

[project]
name = "osrm-bindings"
version = "0.0.1"
description = "Python bindings for the osrm-backend project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: BSD",
]

[project.urls]
repository = "https://github.com/gis-ops/py-osrm"
"osrm-backend repository" = "https://github.com/Project-OSRM/osrm-backend"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/osrm", "src/bin"]

[tool.cibuildwheel]
build-verbosity = 1
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-test = "osrm-datastore {package}/tests/test_data/ch/monaco"

archs = ["native"]
build = "cp*"
skip = "*musllinux*"
manylinux-x86_64-image = "ghcr.io/gis-ops/manylinux:2_28_osrm_python"

[tool.cibuildwheel.linux]
environment = "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib/intel64/gcc4.8/"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=10.14"
