[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.1"]
build-backend = "scikit_build_core.build"

[project]
name = "osrm-bindings"
version = "0.0.1"
description = "Python bindings for the osrm-backend project"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
repository = "https://github.com/gis-ops/py-osrm"
"osrm-backend repository" = "https://github.com/Project-OSRM/osrm-backend"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/osrm", "src/bin"]

[tool.cibuildwheel]
archs = ["native"]
build = "cp*"
build-verbosity = 1
skip = "*musllinux*"
manylinux-x86_64-image = "ghcr.io/gis-ops/manylinux:2_28_osrm_python"
test-requires = "pytest"
test-command = "pytest {project}/tests"
test-command = [
  "cd /d {project}/tests/data",
  "make",
  "python -m osrm datastore {project}/tests/data/ch/monaco",
  "pytest {project}/tests"
]

[tool.cibuildwheel.linux]
environment = "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib/intel64/gcc4.8/"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=10.14"

[tool.cibuildwheel.windows]
test-command = [
  "cd /d {project}/tests/data",
  "windows-build-tests.bat",
  "python -m osrm datastore {project}/tests/data/ch/monaco",
  "pytest {project}/tests"
]
